# jarvis

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: JarvisApp.swift  JarvisHotkeyApp.swift
docs/: architecture.md
scripts/: build_dev_app.py  build_hotkey_app.py  setup_tts.sh  start_tts.sh  start_voxtral_tts.sh
src/jarvis/: __init__.py  __main__.py  active_window.py  cli.py  tts_server.py
src/jarvis/common/: __init__.py  models.py
src/jarvis/mac_agent/: __init__.py  cli.py  client.py  window.py
src/jarvis/mac_mini/: __init__.py  memory.py  server.py
tests/: test_active_window.py  test_mac_mini_server.py  test_window_event_client.py
